--- a/dev/partials/indicators/theme-list.html
+++ b/dev/partials/indicators/theme-list.html
@@ -1,10 +1,9 @@
 <div class="row">
 	<div class="col-md-2">
-		<ng-include src="'/partials/indicators/menu.html'"></ng-include>
+		<ng-include src="'partials/indicators/menu.html'"></ng-include>
 	</div>
 
 	<div class="col-md-10">
-
 		<ol class="breadcrumb">
 			<li><a href="#indicators" translate>shared.indicators</a></li>
 			<li class="active" translate>indicator.themes_list</li>
@@ -27,7 +26,7 @@
 				<tr>
 					<td colspan="3">
 						<div class="input-group input-group-sm" style="width: 100%">
-							<input type="text" class="form-control" ng-model="newTheme" placeholder="Nom du nouveau thème" ng-enter="add()">
+							<input type="text" class="form-control" ng-model="newTheme" placeholder="{{'indicator.new_theme_name'|translate}}" ng-enter="add()">
 							<span class="input-group-btn">
 								<button class="btn btn-default" ng-click="add()" translate>shared.add</button>
 							</span>
