--- a/dev/partials/projects/input-list.html
+++ b/dev/partials/projects/input-list.html
@@ -1,6 +1,6 @@
 <div class="row">
 	<div class="col-md-2">
-		<ng-include src="'/partials/projects/menu.html'"></ng-include>
+		<ng-include src="'partials/projects/menu.html'"></ng-include>
 	</div>
 
 	<div class="col-md-10">
