--- a/dev/partials/projects/reporting.html
+++ b/dev/partials/projects/reporting.html
@@ -25,7 +25,7 @@
 
 <div class="row">
 	<div class="col-md-2">
-		<ng-include src="'/partials/projects/menu.html'"></ng-include>
+		<ng-include src="'partials/projects/menu.html'"></ng-include>
 	</div>
 
 	<div class="col-md-10">
