--- a/dev/partials/projects/list.html
+++ b/dev/partials/projects/list.html
@@ -5,9 +5,9 @@
 	<thead>
 		<tr>
 			<th style="width: 30px"></th>
-			<th><a ng-click="pred = 'name'; rev = !rev" translate>shared.name</a></th>
-			<th><a ng-click="pred = 'begin'; rev = !rev" translate>shared.begin</a></th>
-			<th><a ng-click="pred = 'end'; rev = !rev" translate>shared.end</a></th>
+			<th><a ng-click="pred='name';rev=!rev">{{'shared.name'|translate}}</a></th>
+			<th><a ng-click="pred='begin';rev=!rev">{{'shared.begin'|translate}}</a></th>
+			<th><a ng-click="pred='end';rev=!rev">{{'shared.end'|translate}}</a></th>
 		</tr>
 	</thead>
 	<tbody>
