split controller and service files into modules.

--- a/dev/partials/help/monitoring.html
+++ b/dev/partials/help/monitoring.html
@@ -89,7 +89,7 @@ It is important to take the time to develop the data collection forms and files 
 A. Choosing a data collection method
 There are various confirmation sources and methods for filling in the indicators selected, depending on the type of information being sought: 
 
-1.      Routine information systems: The National Health Information System (NHIS) and/or the Healthcare Facility Health Information System (SIS) provide access to healthcare service statistics, epidemiological data and ***REMOVED***istrative and financial data for a specific ***REMOVED***istrative region (nation, district, community). 
+1.      Routine information systems: The National Health Information System (NHIS) and/or the Healthcare Facility Health Information System (SIS) provide access to healthcare service statistics, epidemiological data and administrative and financial data for a specific administrative region (nation, district, community). 
 
 2.      Cross-sectional surveys on healthcare services — for example, to gauge the level of patient satisfaction or the skill level of health professionals — may be given periodically during supervisory visits. The surveys combine several methods: observation of a sample of medical procedures, case studies, interviews with healthcare providers, interviews with patients after a doctor's visit. 
 
